--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "generative-sushi",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,8 +11,16 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.115",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@types/pg": "^8.16.0",
+    "@vercel/blob": "^2.0.0",
     "ai": "^5.0.113",
+    "dotenv": "^17.2.3",
+    "install": "^0.13.0",
     "next": "16.0.10",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
@@ -19,7 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20",
+    "@types/node": "^25.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "daisyui": "^5.5.14",
